fix category filter section on desktop, icon on mobile, rm old styles

--- a/src/media/css/categories.styl
+++ b/src/media/css/categories.styl
@@ -7,10 +7,14 @@
     }
     .app-list-filters,
     .app-list-filters-sort {
-        display: inline-block;
+        display: block;
     }
     .app-list-filters {
         padding-bottom: 0;
+
+        +media--wide-tablet() {
+            padding-bottom: 15px;
+        }
     }
 }
 
